test/fixtures/public/analysis/success/var_declaration_imported_method.jmm
import java.io.File;
import Parent;

class Child extends Parent {
    public static void main(String[] args) {
        File file;
        String c;

        file = new File();
        c = File.read(file);
    }

}